--- a/templates/vysledky/vysledky.html
+++ b/templates/vysledky/vysledky.html
@@ -102,9 +102,7 @@
     order = "default";
   }
 
-
-  let element = document.getElementById("orderBy");
-  console.log(element)
+  var element = document.getElementById("orderBy");
   element.value = order;
 </script>
 
