Add link to vysledky

--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -4,7 +4,7 @@
     <div class="menuItems">
       <a href="/sedma-trida">dotazník</a>
       <a href="/korona">hra</a>
-      <a href="/profil">výsledky</a>
+      <a href="/vysledky">výsledky</a>
     </div>
     <div>
       🄯2020
